--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=springDataJpaHospitalManagement
 spring.datasource.url=jdbc:postgresql://localhost:5432/hospitalmanagementsystem
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
