query methods in jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 #data initialization
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
