--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #data initialization
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
-#spring.sql.init.data-locations=classpath:data.sql
+#spring.sql.init.data-locations=classpath:dataInitialization.sql
+
