--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: SonarQube
 on:
   push:
     branches:
-      - [ main, master ]
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
