--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+server.servlet.context-path=/api/v1
+
+#Security Configuration
+spring.security.user.name=sandesh
+spring.security.user.password=sandesh
+
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 #data initialization
